# webRep

./: List_Microsoft_Excel (5).xlsx  Otvety_na_voprosy_Proekt.docx  карточка проекта.docx
ShowFolio/: .gitignore  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml
ShowFolio/ShowFolio/: asgi.py  settings.py  urls.py  wsgi.py
ShowFolio/configs/: settings.py  urls.py
ShowFolio/main/: forms.py  models.py  urls.py  views.py
ShowFolio/main/templates/main/: achievement-01.html  achievement-02.html  achievement-03.html  achievement-04.html  achievement-05.html  achievements.html  index.html  login.html  portfolio-01-form.html  portfolio-01.html  portfolio-02-form.html  portfolio-02.html  portfolio-03-form.html  portfolio-03.html  portfolio-04-form.html  portfolio-04.html  portfolio-05-form.html  portfolio-05.html  portfolio-06-form.html  portfolio-06.html  portfolio.html  profile.html  project.html  register.html  reset-password-01.html  reset-password-02.html  reset-password.html  team.html  (+1 more)
ShowFolio/static/css/: app.css  style.css  style.min.css
ShowFolio/users/: admin.py  forms.py  urls.py  views.py
ShowFolio/users/migrations/: 0001_initial.py  0002_user_avatar_user_bio.py  0003_portfolio_portfoliolike_portfoliofile.py  0004_portfolio_is_published_alter_portfolio_description_and_more.py  0005_alter_portfoliofile_image.py  0006_portfolio_owner.py  0007_achievement.py  0008_achievement_mark_as_read.py  0009_passwordresetrecord.py
ShowFolio/users/models/: __init__.py  achievement.py  file.py  like.py  password_reset.py  portfolio.py  user.py
(+31 files in other folders)
